--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,15 +26,19 @@ jobs:
       run: |
         pip install pytest
         # pytest test/unit
-  deploy:
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v1
     - name: Create gcp_key.json
       env:
         super_secret: ${{ secrets.GCP_KEY }}
       run: |
         echo ${GCP_KEY} > gcp_key.json
+    - name: Create saple_secret.json
+      env:
+        super_secret: ${{ secrets.SAMPLE_SECRET }}
+      run: |
+        echo ${SAMPLE_SECRET} > sample_secret.json
+    - name: print saple_secret.json
+      run: |
+        cat saple_secret.json
     - name: Deploy
       run: |
         echo "TBD"
