--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Test
 
 on: [push]
 
@@ -26,13 +26,3 @@ jobs:
       run: |
         pip install pytest
         # pytest test/unit
-    - name: Authenticate GCP
-      if: github.event == 'push'
-      uses: actions/gcloud/auth@master
-      env:
-        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-    - name: List Cloud Functions
-      run: |
-        gcloud functions list
-      if: github.event == 'push'
-      uses: actions/gcloud/cli@master
