--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,13 @@ jobs:
       run: |
         pip install pytest
         # pytest test/unit
+    - name: Authenticate GCP
+      if: github.branch == 'master'
+      uses: actions/gcloud/auth@master
+      env:
+        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+    - name: List Cloud Functions
+      if: github.branch == 'master'
+      uses: actions/gcloud/cli@master
+      run: |
+        gcloud functions list
