--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,12 @@
 name: Test
 
-on: [push]
+on:
+  push:
+    branches:
+    - master
 
+# TODO branch builds & PR builds
+    
 jobs:
   build:
     runs-on: ubuntu-18.04
@@ -31,8 +36,8 @@ jobs:
       uses: actions/gcloud/auth@master
       env:
         GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-    - name: List Cloud Functions
-      if: github.branch == 'master'
-      uses: actions/gcloud/cli@master
-      run: |
-        gcloud functions list
+#     - name: List Cloud Functions
+#       if: github.branch == 'master'
+#       uses: actions/gcloud/cli@master
+#       run: |
+#         gcloud functions list
