--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,19 +14,15 @@ jobs:
       uses: actions/gcloud/auth@master
       env:
         GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-  deploy_iterate_users:
-    runs-on: ubuntu-18.04
-    steps:
-    - name: Deploy
+    - name: Deploy iterate_users
+      needs: Authenticate GCP
       uses: actions/gcloud/cli@master
       with:
         args: functions deploy iterate_users --region=us-central1 --entry-point=iterate_users
       env:
         CLOUDSDK_CORE_PROJECT: ${{ secrets.CLOUDSDK_CORE_PROJECT }}
-  deploy_process_user:
-    runs-on: ubuntu-18.04
-    steps:
-    - name: Deploy
+    - name: Deploy process_user
+      needs: Authenticate GCP
       uses: actions/gcloud/cli@master
       with:
         args: functions deploy process_user --region=us-central1 --entry-point=process_user
