--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
     - master
 
 jobs:
-  setup:
+  iterate_users:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v1
@@ -20,12 +20,28 @@ jobs:
         args: functions deploy iterate_users --region=us-central1 --entry-point=iterate_users
       env:
         CLOUDSDK_CORE_PROJECT: ${{ secrets.CLOUDSDK_CORE_PROJECT }}
+  process_user:
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v1
+    - name: Authenticate GCP
+      uses: actions/gcloud/auth@master
+      env:
+        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
     - name: Deploy process_user
       uses: actions/gcloud/cli@master
       with:
         args: functions deploy process_user --region=us-central1 --entry-point=process_user
       env:
         CLOUDSDK_CORE_PROJECT: ${{ secrets.CLOUDSDK_CORE_PROJECT }}
+  process_video:
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v1
+    - name: Authenticate GCP
+      uses: actions/gcloud/auth@master
+      env:
+        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
     - name: Deploy process_video
       uses: actions/gcloud/cli@master
       with:
