--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-dateutil
-oauth2client
-firebase-admin
-youtube-dl
-ffmpeg-python
+python-dateutil==2.8.0
+oauth2client==4.1.3
+firebase-admin==3.0.0
+youtube-dl==2019.9.12.1
+ffmpeg-python==0.2.0
