--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=1000 --statistics
-    - name: Test with pytest
+    - name: Generate coverage report
       run: |
         pip install pytest
-        pytest test/unit
+        pip install pytest-cov
+        pytest test/unit --cov=./ytmdl --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@master
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
+        file: ./coverage.xml
